@@ -5,28 +5,29 @@
 
 package ai.startree.thirdeye.cube.data.dbclient;
 
+import static com.google.common.base.Preconditions.checkArgument;
+import static org.apache.commons.lang3.StringUtils.isNotBlank;
+
 import ai.startree.thirdeye.cube.data.dbrow.Dimensions;
 import ai.startree.thirdeye.cube.data.dbrow.Row;
-import ai.startree.thirdeye.datasource.MetricExpression;
-import ai.startree.thirdeye.datasource.ThirdEyeCacheRegistry;
 import ai.startree.thirdeye.datasource.cache.DataSourceCache;
-import ai.startree.thirdeye.spi.datasource.MetricFunction;
-import ai.startree.thirdeye.spi.datasource.ThirdEyeRequest;
-import ai.startree.thirdeye.spi.datasource.ThirdEyeResponse;
-import ai.startree.thirdeye.spi.detection.MetricAggFunction;
-import ai.startree.thirdeye.util.ThirdEyeUtils;
-import ai.startree.thirdeye.util.Utils;
+import ai.startree.thirdeye.datasource.calcite.CalciteRequest;
+import ai.startree.thirdeye.datasource.calcite.QueryPredicate;
+import ai.startree.thirdeye.datasource.calcite.QueryProjection;
+import ai.startree.thirdeye.spi.Constants;
+import ai.startree.thirdeye.spi.dataframe.DataFrame;
+import ai.startree.thirdeye.spi.datalayer.Predicate;
+import ai.startree.thirdeye.spi.datalayer.dto.DatasetConfigDTO;
+import ai.startree.thirdeye.spi.datalayer.dto.MetricConfigDTO;
+import ai.startree.thirdeye.spi.metric.DimensionType;
 import com.google.common.base.Preconditions;
-import com.google.common.collect.Lists;
-import com.google.common.collect.Multimap;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -52,65 +53,71 @@ public class CubeFetcherImpl<R extends Row> implements CubeFetcher<R> {
   private static final Logger LOG = LoggerFactory.getLogger(CubeFetcherImpl.class);
   private final static int TIME_OUT_VALUE = 1200;
   private final static TimeUnit TIME_OUT_UNIT = TimeUnit.SECONDS;
+  public static final int QUERY_LIMIT = 100000;
 
-  private final ThirdEyeCacheRegistry thirdEyeCacheRegistry;
   private final DataSourceCache dataSourceCache;
   private final CubeMetric<R> cubeMetric;
 
   /**
    * Constructs a Cube client.
-   *
    */
-  public CubeFetcherImpl(DataSourceCache dataSourceCache,
-      final ThirdEyeCacheRegistry thirdEyeCacheRegistry, CubeMetric<R> cubeMetric) {
+  public CubeFetcherImpl(DataSourceCache dataSourceCache, CubeMetric<R> cubeMetric) {
     this.dataSourceCache = Preconditions.checkNotNull(dataSourceCache);
-    this.thirdEyeCacheRegistry = thirdEyeCacheRegistry;
     this.cubeMetric = cubeMetric;
   }
 
   /**
    * Construct bulks ThirdEye requests.
    *
-   * @param dataset the data set to be queries.
+   * @param datasetConfigDTO dataset config.
    * @param cubeSpecs the spec to retrieve the metrics.
    * @param groupBy groupBy for database.
-   * @param filterSets the data filter.
+   * @param predicates the filter predicates.
    * @return a list of ThirdEye requests.
    */
-  protected Map<CubeTag, ThirdEyeRequestMetricExpressions> constructBulkRequests(
-      String dataset,
-      List<CubeSpec> cubeSpecs, List<String> groupBy, Multimap<String, String> filterSets)
-      throws ExecutionException {
+  protected Map<CubeTag, CalciteRequest> constructBulkRequests(DatasetConfigDTO datasetConfigDTO,
+      List<CubeSpec> cubeSpecs, List<String> groupBy, List<Predicate> predicates) {
 
-    Map<CubeTag, ThirdEyeRequestMetricExpressions> requests = new HashMap<>();
+    Map<CubeTag, CalciteRequest> requests = new HashMap<>();
 
     for (CubeSpec cubeSpec : cubeSpecs) {
-      // Set dataset and metric
-      List<MetricExpression> metricExpressions =
-          Utils.convertToMetricExpressions(cubeSpec.getMetric(), MetricAggFunction.SUM, dataset,
-              thirdEyeCacheRegistry);
-      List<MetricFunction> metricFunctions = metricExpressions.get(0).computeMetricFunctions(
-          thirdEyeCacheRegistry);
-
-      ThirdEyeRequest.ThirdEyeRequestBuilder builder = ThirdEyeRequest.newBuilder();
-
-      builder.setMetricFunctions(metricFunctions);
-      builder.setDataSource(ThirdEyeUtils.getDataSourceFromMetricFunctions(metricFunctions));
-
-      // Set start and end time
-      builder.setStartTimeInclusive(cubeSpec.getInterval().getStartMillis());
-      builder.setEndTimeExclusive(cubeSpec.getInterval().getEndMillis());
-
-      // Set groupBy and filter
-      builder.setGroupBy(groupBy);
-      builder.setFilterSet(filterSets);
-
-      requests.put(cubeSpec.getTag(),
-          new ThirdEyeRequestMetricExpressions(builder.build(cubeSpec.getTag().toString()),
-              metricExpressions));
+      final CalciteRequest calciteRequest = constructRequest(datasetConfigDTO,
+          groupBy,
+          predicates,
+          cubeSpec);
+      requests.put(cubeSpec.getTag(), calciteRequest);
     }
 
     return requests;
+  }
+
+  private CalciteRequest constructRequest(final DatasetConfigDTO datasetConfigDTO,
+      final List<String> groupBy, final List<Predicate> predicates, final CubeSpec cubeSpec) {
+    final MetricConfigDTO metricConfigDTO = cubeSpec.getMetric();
+    final CalciteRequest.Builder builder = CalciteRequest.newBuilder(datasetConfigDTO.getDataset())
+        .withTimeFilter(cubeSpec.getInterval(),
+            datasetConfigDTO.getTimeColumn(),
+            datasetConfigDTO.getTimeFormat(),
+            datasetConfigDTO.getTimeUnit().name())
+        .addSelectProjection(QueryProjection.fromMetricConfig(metricConfigDTO)
+            .withAlias(Constants.COL_VALUE))
+        // notice this limit has a significant impact on the algorithm. When dicing by many dimensions, num of rows grows exponentially.
+        // Because there is no sorting, there is no insurance we will get the relevant rows, the ones with the biggest impact
+        // the query limit is high but does not solve the problem - a warning is raised if the limit is reached
+        .withLimit(QUERY_LIMIT);
+    if (isNotBlank(metricConfigDTO.getWhere())) {
+      builder.addPredicate(metricConfigDTO.getWhere());
+    }
+    for (Predicate predicate : predicates) {
+      builder.addPredicate(QueryPredicate.of(predicate, DimensionType.STRING));
+    }
+    for (String groupByColumn : groupBy) {
+      QueryProjection groupByProjection = QueryProjection.of(groupByColumn);
+      builder.addSelectProjection(groupByProjection);
+      builder.addGroupByProjection(groupByProjection);
+    }
+
+    return builder.build();
   }
 
   /**
@@ -131,32 +138,21 @@ public class CubeFetcherImpl<R extends Row> implements CubeFetcher<R> {
    * Returns a list of rows. The value of each row is evaluated and no further processing is needed.
    *
    * @param dimensions dimensions of the response
-   * @param response the response from backend database
+   * @param dataFrame the response dataFrame from backend database
    * @param rowTable the storage for rows
    * @param tag true if the response is for baseline values
    */
-  protected void buildMetricFunctionOrExpressionsRows(Dimensions dimensions,
-      List<MetricExpression> metricExpressions,
-      List<MetricFunction> metricFunctions, ThirdEyeResponse response,
+  protected void buildMetricFunctionOrExpressionsRows(Dimensions dimensions, DataFrame dataFrame,
       Map<List<String>, R> rowTable, CubeTag tag) {
-    Map<String, Double> context = new HashMap<>();
-    for (int rowIdx = 0; rowIdx < response.getNumRows(); ++rowIdx) {
-      double value = 0d;
+    for (int rowIdx = 0; rowIdx < dataFrame.size(); ++rowIdx) {
       // If the metric expression is a single metric function, then we get the value immediately
-      if (metricFunctions.size() <= 1) {
-        value = response.getRow(rowIdx).getMetrics().get(0);
-      } else { // Otherwise, we need to evaluate the expression
-        for (int metricFuncIdx = 0; metricFuncIdx < metricFunctions.size(); ++metricFuncIdx) {
-          double contextValue = response.getRow(rowIdx).getMetrics().get(metricFuncIdx);
-          context.put(metricFunctions.get(metricFuncIdx).getMetricName(), contextValue);
-        }
-        try {
-          value = MetricExpression.evaluateExpression(metricExpressions.get(0), context);
-        } catch (Exception e) {
-          LOG.warn(e.getMessage());
-        }
-      }
-      List<String> dimensionValues = response.getRow(rowIdx).getDimensions();
+      double value = dataFrame.getDouble(Constants.COL_VALUE, rowIdx);
+      final int finalRowIdx = rowIdx;
+      List<String> dimensionValues = dataFrame.getSeriesNames()
+          .stream()
+          .filter(name -> !name.equals(Constants.COL_VALUE))
+          .map(dimensionName -> dataFrame.getString(dimensionName, finalRowIdx))
+          .collect(Collectors.toList());
       fillValueToRowTable(rowTable, dimensions, dimensionValues, value, tag);
     }
   }
@@ -169,40 +165,39 @@ public class CubeFetcherImpl<R extends Row> implements CubeFetcher<R> {
    * @return Cube rows.
    */
   protected List<List<R>> constructAggregatedValues(Dimensions dimensions,
-      List<Map<CubeTag, ThirdEyeRequestMetricExpressions>> bulkRequests) throws Exception {
+      List<Map<CubeTag, CalciteRequest>> bulkRequests) throws Exception {
 
-    List<ThirdEyeRequest> allRequests = new ArrayList<>();
-    for (Map<CubeTag, ThirdEyeRequestMetricExpressions> bulkRequest : bulkRequests) {
-      for (Map.Entry<CubeTag, ThirdEyeRequestMetricExpressions> entry : bulkRequest.entrySet()) {
-        ThirdEyeRequest thirdEyeRequest = entry.getValue().getThirdEyeRequest();
-        allRequests.add(thirdEyeRequest);
-      }
-    }
+    List<CalciteRequest> allRequests = new ArrayList<>();
+    bulkRequests.forEach(bulkRequest -> allRequests.addAll(bulkRequest.values()));
 
-    Map<ThirdEyeRequest, Future<ThirdEyeResponse>> queryResponses = dataSourceCache
-        .getQueryResultsAsync(allRequests);
+    Map<CalciteRequest, Future<DataFrame>> queryResponses = dataSourceCache.getQueryResultsAsync(
+        allRequests,
+        cubeMetric.getDataset().getDataSource());
 
     List<List<R>> res = new ArrayList<>();
     int level = 0;
-    for (Map<CubeTag, ThirdEyeRequestMetricExpressions> bulkRequest : bulkRequests) {
+    for (Map<CubeTag, CalciteRequest> bulkRequest : bulkRequests) {
       Map<List<String>, R> rowOfSameLevel = new HashMap<>();
 
-      for (Map.Entry<CubeTag, ThirdEyeRequestMetricExpressions> entry : bulkRequest.entrySet()) {
+      for (Map.Entry<CubeTag, CalciteRequest> entry : bulkRequest.entrySet()) {
         CubeTag tag = entry.getKey();
-        ThirdEyeRequest thirdEyeRequest = entry.getValue().getThirdEyeRequest();
-        ThirdEyeResponse thirdEyeResponse = queryResponses.get(thirdEyeRequest)
-            .get(TIME_OUT_VALUE, TIME_OUT_UNIT);
-        if (thirdEyeResponse.getNumRows() == 0) {
-          LOG.warn("Get 0 rows from the request(s): {}", thirdEyeRequest);
+        CalciteRequest calciteRequest = entry.getValue();
+        DataFrame df = queryResponses.get(calciteRequest).get(TIME_OUT_VALUE, TIME_OUT_UNIT);
+        if (df.size() == 0) {
+          LOG.warn("Get 0 rows from the request: {}", calciteRequest);
         }
-        List<MetricExpression> metricExpressions = entry.getValue().getMetricExpressions();
-        buildMetricFunctionOrExpressionsRows(dimensions, metricExpressions,
-            thirdEyeRequest.getMetricFunctions(),
-            thirdEyeResponse, rowOfSameLevel, tag);
+        if (df.size() == QUERY_LIMIT) {
+          LOG.warn(
+              "Got {} rows from the request. This corresponds to the LIMIT clause. "
+                  + "Rows are randomly chosen, dimension analysis algorithm may not return the best results. Request: {}",
+              calciteRequest);
+        }
+        buildMetricFunctionOrExpressionsRows(dimensions, df, rowOfSameLevel, tag);
       }
       if (rowOfSameLevel.size() == 0) {
         LOG.warn("Failed to retrieve non-zero results for requests of level {}. BulkRequest: {}",
-            level, bulkRequest);
+            level,
+            bulkRequest);
       }
       List<R> rows = new ArrayList<>(rowOfSameLevel.values());
       res.add(rows);
@@ -213,12 +208,15 @@ public class CubeFetcherImpl<R extends Row> implements CubeFetcher<R> {
   }
 
   @Override
-  public R getTopAggregatedValues(Multimap<String, String> filterSets) throws Exception {
-    List<String> groupBy = Collections.emptyList();
-    List<Map<CubeTag, ThirdEyeRequestMetricExpressions>> bulkRequests = Collections.singletonList(
-        constructBulkRequests(cubeMetric.getDataset(), cubeMetric.getCubeSpecs(), groupBy, filterSets));
+  public R getTopAggregatedValues(List<Predicate> predicates) throws Exception {
+    List<Map<CubeTag, CalciteRequest>> bulkRequests = List.of(constructBulkRequests(cubeMetric.getDataset(),
+        cubeMetric.getCubeSpecs(),
+        List.of(),
+        predicates));
     // quickfix - redundant local variables for better IndexOutOfBoundsException logging
     List<List<R>> aggregatedValues = constructAggregatedValues(new Dimensions(), bulkRequests);
+    checkArgument(aggregatedValues.size() > 0,
+        "No data found in timeframe. Cannot perform dimension analysis.");
     List<R> aggregatedValue = aggregatedValues.get(0);
     R topValue = aggregatedValue.get(0);
     return topValue;
@@ -226,26 +224,28 @@ public class CubeFetcherImpl<R extends Row> implements CubeFetcher<R> {
 
   @Override
   public List<List<R>> getAggregatedValuesOfDimension(Dimensions dimensions,
-      Multimap<String, String> filterSets)
-      throws Exception {
-    List<Map<CubeTag, ThirdEyeRequestMetricExpressions>> bulkRequests = new ArrayList<>();
+      List<Predicate> predicates) throws Exception {
+    List<Map<CubeTag, CalciteRequest>> bulkRequests = new ArrayList<>();
     for (int level = 0; level < dimensions.size(); ++level) {
-      List<String> groupBy = Lists.newArrayList(dimensions.get(level));
-      bulkRequests.add(
-          constructBulkRequests(cubeMetric.getDataset(), cubeMetric.getCubeSpecs(), groupBy, filterSets));
+      final Map<CubeTag, CalciteRequest> requests = constructBulkRequests(cubeMetric.getDataset(),
+          cubeMetric.getCubeSpecs(),
+          List.of(dimensions.get(level)),
+          predicates);
+      bulkRequests.add(requests);
     }
     return constructAggregatedValues(dimensions, bulkRequests);
   }
 
   @Override
   public List<List<R>> getAggregatedValuesOfLevels(Dimensions dimensions,
-      Multimap<String, String> filterSets)
-      throws Exception {
-    List<Map<CubeTag, ThirdEyeRequestMetricExpressions>> bulkRequests = new ArrayList<>();
+      List<Predicate> predicates) throws Exception {
+    List<Map<CubeTag, CalciteRequest>> bulkRequests = new ArrayList<>();
     for (int level = 0; level < dimensions.size() + 1; ++level) {
-      List<String> groupBy = Lists.newArrayList(dimensions.namesToDepth(level));
-      bulkRequests.add(
-          constructBulkRequests(cubeMetric.getDataset(), cubeMetric.getCubeSpecs(), groupBy, filterSets));
+      final Map<CubeTag, CalciteRequest> requests = constructBulkRequests(cubeMetric.getDataset(),
+          cubeMetric.getCubeSpecs(),
+          dimensions.namesToDepth(level),
+          predicates);
+      bulkRequests.add(requests);
     }
     return constructAggregatedValues(dimensions, bulkRequests);
   }
